# octopilot-pipeline-tools

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  NOTICE  README.md  WORKFLOW.md  go.mod  go.sum  justfile  pyproject.toml  skaffold.md  skaffold.yaml
.github/: dependabot.yml
.github/workflows/: build-packaging.yml  ci.yml  dependabot-automerge.yml  publish-image.yml  release.yml  trigger-release.yml
base/: Dockerfile
cmd/op/: main.go
internal/cmd/: build.go  build_mixed_test.go  build_options_test.go  build_test.go  promote.go  promote_test.go  root.go  run.go  run_test.go  start_registry.go  start_registry_test.go  version.go  watch.go  watch_test.go
internal/pack/: build.go
internal/util/: build_result.go  build_result_test.go  cert.go  config.go  config_test.go  exec.go  infer.go  infer_test.go  net.go  net_test.go  registry.go  registry_test.go  repo.go  repo_test.go  run_config.go  run_config_test.go  skaffold.go  skaffold_test.go  trust.go  trust_colima.go  trust_darwin.go  trust_linux.go  trust_other.go
packaging/: README.md
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
python-legacy/: .pre-commit-config.yaml  CONTRIBUTING.md  DEPENDENCIES.md  README.md  justfile  procfile.md  pyproject.toml  skaffold.md
python-legacy/packaging/: README.md
python-legacy/packaging/chocolatey/: octopilot-pipeline-tools.nuspec
python-legacy/packaging/deb-rpm/: build-deb-rpm.sh
python-legacy/packaging/homebrew/: octopilot-pipeline-tools.rb
python-legacy/src/octopilot_pipeline_tools/: __init__.py  build_result.py  config.py  pack_build.py  run_ports.py
python-legacy/tests/: __init__.py  test_build_result.py  test_config.py  test_infer_run_options.py  test_pack_build.py  test_registry.py  test_start_registry.py
scripts/: squash_remove_cursor_coauthor.py  strip_cursor_coauthor.py
src/octopilot_pipeline_tools/: build_result.py  cli.py  config.py  infer_run_options.py  pack_build.py  registry.py  run_config.py  start_registry.py  tag_resolution.py
tests/: test_build_result.py  test_cli.py  test_config.py  test_pack_build.py  test_registry.py  test_run_config.py  test_run_ports.py  test_start_registry.py  test_tag_resolution.py
tests/integration/: main_test.go
tests/integration/fixtures/buildpack/: main.go  skaffold-runimage.yaml  skaffold.yaml
tests/integration/fixtures/certs/: tls.crt
tests/integration/fixtures/dockerfile/: Dockerfile  main.go  skaffold.yaml
tests/integration/fixtures/helm/: skaffold.yaml
tests/integration/fixtures/helm/chart/: Chart.yaml  values.yaml
tests/integration/fixtures/helm/chart/templates/: NOTES.txt  configmap.yaml
tests/integration/fixtures/multicontext/: skaffold.yaml
tests/integration/fixtures/multicontext/app/: main.go
tests/integration/fixtures/multicontext/base/: Dockerfile
